@@ -1,4 +1,8 @@
-2014-05-02  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+2014-05-05  Anton Kolesov  <Anton.Kolesov@synopsys.com>
+
+	* windows-installer/build-installer.sh: New file.
+
+2014-05-05  Anton Kolesov  <Anton.Kolesov@synopsys.com>
 
 	* windows-installer/setub-base.nsi: Rename to setup-base.nsi.
 
